Thu Jul 31 11:36:35 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:

          Added the ability for the main Makefile to stop after the first
          error.  By default, it moves on to the next makefile when an error
          is encountered.  Now, set the make macro KEEP_GOING to zero to
          have it stop after the first error is encountered.

Thu Jul 31 16:14:30 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * examples/C++NPv2/C++NPv2.mpc:
        * examples/Log_Msg/Log_Msg_MFC/Log_Msg_MFC.mpc:
        * examples/Reactor/WFMO_Reactor/WFMO_Reactor.mpc:
        * examples/Registry/Registry.mpc:
          Added a verbatim tag that ifdef's out the entire Makefile on
          non-Windows systems.  This code can probably be factored out
          into a platform specific template that Windows only project
          inherite. Also, this will probably prevent these project from
          being built with Cygwin and MinGW, since the only test for the
          MAKE variable, not a Windows specific variable.

Thu Jul 31 07:42:57 2003  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * apps/soreduce/Obj_Module.cpp (add_source):
        * apps/soreduce/SO_Group.cpp (add_executable): Fixed bugs where
          application code was being called within ACE_ASSERT macros,
          which were disappearing when ACE_NDEBUG was enabled!  Thanks to
          Roland Meub <roland.meub@gmx.de> for reporting this fix.

Thu Jul 31 01:29:16 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * examples/Export/Export.mpc:
          Added sharedname to library project and libs to executable so
          they would link correctly.

        * examples/IPC_SAP/FIFO_SAP/fifo_sap.mpc:
        * examples/Smart_Pointers/Smart_Pointers.mpc:
          Fixed minor typo's in exename and sourcefile name.

Thu Jul 31 00:49:18 UTC 2003  Don Hinton  <dhinton@dresystems.com>
